--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p class="old-price">$169.99</p>
         </div>
         <button>
-          <img src="./images/icon-cart.svg" class="shopping-cart">
+          <img src="./images/icon-cart.svg" class="shopping-cart" alt="Shopping cart icon">
           Add to Cart
         </button>
       </div>
