--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="left-card">
         <picture>
-          <source class="desktop-image" media="(min-width: 650px)" srcset="./images/image-product-desktop.jpg">
+          <source class="desktop-image" media="(min-width: 650px)" srcset="./images/image-product-desktop.jpg" alt="Chanel perfume bottle">
           <img class="mobile-image" src="./images/image-product-mobile.jpg" alt="Chanel perfume bottle">
         </picture>
       </div>
